--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ html {
 
 body {
     height: 100%;
+    background: linear-gradient(to right, #FFFFFF, #ECE9E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
+    background-size: 100%;
     
 }
 a {
@@ -16,4 +18,4 @@ a {
 .social-image{
     width: 30px;
     margin: 15px;
-}
+} 
